// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithUnit /> by default matches with snapshot 1`] = `
<div
  className="sc-AxhUy YnAIG"
>
  <input
    className="sc-AxirZ fNOQKu sc-AxgMl iHEIpk"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="sc-AxheI NjysK"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with disabled prop matches with snapshot 1`] = `
<div
  className="sc-AxhUy YnAIG"
>
  <input
    className="sc-AxirZ fNOQKu sc-AxgMl iHEIpk"
    disabled={true}
    name="text"
    type="number"
  />
  <span
    className="sc-AxheI kMaJRK"
    disabled={true}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with error prop matches with snapshot 1`] = `
<div
  className="sc-AxhUy YnAIG"
>
  <input
    className="sc-AxirZ xUmbP sc-AxgMl iHEIpk"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="sc-AxheI cvuKYd"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with unit prop matches with snapshot 1`] = `
<div
  className="sc-AxhUy YnAIG"
>
  <input
    className="sc-AxirZ fNOQKu sc-AxgMl iHEIpk"
    disabled={false}
    name="text"
    type="number"
  >
    €
  </input>
  <span
    className="sc-AxheI NjysK"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with valid prop matches with snapshot 1`] = `
<div
  className="sc-AxhUy YnAIG"
>
  <input
    className="sc-AxirZ klxVlX sc-AxgMl iHEIpk"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="sc-AxheI kVDhib"
    disabled={false}
  >
    λ
  </span>
</div>
`;
